# viasp

./: .gitignore  .readthedocs.yaml  LICENCE.md  README.md  postBuild  requirements.txt  setup.cfg  setup.py
.github/: conda.py
backend/: environment.yml  setup.cfg
backend/src/viasp/: __init__.py  __main__.py  api.py  clingoApiClient.py  exampleTransformer.py  exceptions.py  start_backend.py  startup.py  wrapper.py
backend/src/viasp/asp/: ast_types.py  justify.py  recursion.py  reify.py  relax.py  replayer.py  utils.py
backend/src/viasp/server/: colorPalette.json  database.py  factory.py  html.py  startup.py
backend/src/viasp/server/blueprints/: api.py  app.py  dag_api.py
backend/src/viasp/server/static/: colorPalette.json
backend/src/viasp/shared/: defaults.py  interfaces.py  io.py  model.py  simple_logging.py  util.py
backend/src/viasp/viasp_jupyter/: __init__.py  viasp_jupyter.py
backend/test/: conftest.py  helper.py  internal_test.py  test_analyzer.py  test_api.py  test_cli.py  test_clingraph.py  test_database.py  test_graph_creation.py  test_graph_utils.py  test_integration.py  test_io.py  test_model.py  test_python_api.py  test_reification.py  test_relaxer.py  test_replayer.py  test_server.py  test_viasp.py
backend/test/api/: test_control_api.py  test_graph.py  test_query.py
backend/test/resources/: sample_encoding.lp  sample_model.lp
binder/: Dockerfile  environment.yml  postBuild  requirements.txt
docs/: conf.py  index.rst  requirements.txt
example_notebook/: import_mypackage.ipynb  intro_viasp.ipynb
examples/: App.py  AppExtend.py  Color Editor.ipynb  Introduction to viASP (colab version).ipynb  hamiltonian.lp  (+7 more)
(+106 files in other folders)
