[metadata]
name = viasp
version = 2.1.1
author = Luis Glaser
author_email = Luis.Glaser@uni-potsdam.de
description = a visualization tool for clingo.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/potassco/viasp
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
install_requires =
    viasp-backend>=2.0.0
    viasp-dash>=2.0.0
packages = find:
package_dir =
    =.
[options.packages.find]
where = .
# exclude = 
#     frontend
#     backend