[metadata]
name = viasp-backend
version = 2.1.1
author = Luis Glaser
author_email = Luis.Glaser@uni-potsdam.de
description = The backend for the viasp package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/potassco/viasp
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    networkx>=2.4
    flask>=2.2.0
    clingo>=5.6.0
    flask-cors>=3.0
    requests>=2.26.0
    igraph>=0.8
    numpy
    clingraph
    waitress
[options.packages.find]
where = src

[options.package_data]
viasp = server/colorPalette.json

[options.entry_points]
console_scripts =
    viasp_server = viasp.__main__:backend
    viasp = viasp.__main__:start

[options.extras_require]
testing =
    pytest
